minor spacing fix

--- a/src/pages/styles/Projects.module.scss
+++ b/src/pages/styles/Projects.module.scss
@@ -62,7 +62,7 @@
   color: aquamarine;
   font-size: 1.5rem;
   font-style: italic;
-  top: -30px;
+  top: -10px;
   left: 40px;
   font-weight: 200;
 }
